--- a/RecycleProject/Supporting files/Base.lproj/LaunchScreen.storyboard
+++ b/RecycleProject/Supporting files/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -16,30 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="89" translatesAutoresizingMaskIntoConstraints="NO" id="kJb-Ow-cFV">
-                                <rect key="frame" x="0.0" y="284" width="375" height="254"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ресайкл" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ny-q2-b3x">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="50"/>
-                                        <color key="textColor" name="CustomLabelTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchscreenTrashcans" translatesAutoresizingMaskIntoConstraints="NO" id="sS6-cn-ZsQ">
-                                        <rect key="frame" x="0.0" y="148" width="375" height="106"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="sS6-cn-ZsQ" secondAttribute="height" multiplier="46:13" id="v7f-FT-env"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchscreenTrashcans" translatesAutoresizingMaskIntoConstraints="NO" id="sS6-cn-ZsQ">
+                                <rect key="frame" x="0.0" y="358" width="375" height="106"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="sS6-cn-ZsQ" secondAttribute="height" multiplier="46:13" id="v7f-FT-env"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ресайкл" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ny-q2-b3x">
+                                <rect key="frame" x="0.0" y="229" width="375" height="59"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="50"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" name="CustomBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kJb-Ow-cFV" secondAttribute="trailing" id="6nG-mJ-tdx"/>
-                            <constraint firstItem="kJb-Ow-cFV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9GQ-Pp-akR"/>
-                            <constraint firstItem="kJb-Ow-cFV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bge-68-093"/>
-                            <constraint firstItem="kJb-Ow-cFV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="hSS-73-f1P"/>
+                            <constraint firstItem="sS6-cn-ZsQ" firstAttribute="top" secondItem="9ny-q2-b3x" secondAttribute="bottom" constant="70" id="EJA-s9-NHN"/>
+                            <constraint firstItem="sS6-cn-ZsQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Fcy-EN-7ST"/>
+                            <constraint firstItem="9ny-q2-b3x" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Jif-nS-ODB"/>
+                            <constraint firstItem="sS6-cn-ZsQ" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="MAg-bh-h1e"/>
+                            <constraint firstItem="sS6-cn-ZsQ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="i7Q-MO-G0L"/>
+                            <constraint firstItem="9ny-q2-b3x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iHX-AH-vbF"/>
+                            <constraint firstItem="sS6-cn-ZsQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="tcj-dN-ihg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -53,9 +50,6 @@
         <image name="LaunchscreenTrashcans" width="375" height="105"/>
         <namedColor name="CustomBackgroundColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="CustomLabelTextColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
