--- a/RecycleProject/View/Base.lproj/Main.storyboard
+++ b/RecycleProject/View/Base.lproj/Main.storyboard
@@ -23,11 +23,11 @@
                                 <color key="separatorColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="371" id="SUM-4R-IqB" customClass="NewsTableViewCell" customModule="Ресайкл" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="371"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="346" id="SUM-4R-IqB" customClass="NewsTableViewCell" customModule="Ресайкл" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="346"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SUM-4R-IqB" id="UGz-uW-jft">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="371"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="346"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SampleNewsImage" translatesAutoresizingMaskIntoConstraints="NO" id="Rsv-yn-iDZ">
@@ -37,7 +37,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="VQt-Uj-bBj">
-                                                    <rect key="frame" x="15" y="221" width="345" height="129"/>
+                                                    <rect key="frame" x="15" y="221" width="345" height="104"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tCD-sM-OoS">
                                                             <rect key="frame" x="0.0" y="0.0" width="345" height="20"/>
@@ -58,7 +58,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Annotation" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsy-yl-a1c">
-                                                            <rect key="frame" x="0.0" y="56" width="345" height="45"/>
+                                                            <rect key="frame" x="0.0" y="56" width="345" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="GVw-mD-J2F"/>
                                                             </constraints>
@@ -67,7 +67,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vts-XL-bJl">
-                                                            <rect key="frame" x="0.0" y="109" width="345" height="20"/>
+                                                            <rect key="frame" x="0.0" y="84" width="345" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20" id="wM9-wO-30W"/>
                                                             </constraints>
@@ -152,28 +152,28 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="t6Q-ge-sKW">
-                                        <rect key="frame" x="20" y="237" width="335" height="71"/>
+                                        <rect key="frame" x="20" y="237" width="335" height="71.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="szg-Xs-3Zw">
                                                 <rect key="frame" x="0.0" y="0.0" width="335" height="18"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="18" id="cag-19-3n0"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                                 <color key="textColor" name="CustomTabBarTintColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n97-TC-f5Z">
-                                                <rect key="frame" x="0.0" y="26" width="335" height="20"/>
+                                                <rect key="frame" x="0.0" y="26" width="335" height="20.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="20" id="se5-Q2-fFi"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="se5-Q2-fFi"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mh-fN-Wjk">
-                                                <rect key="frame" x="0.0" y="54" width="335" height="17"/>
+                                                <rect key="frame" x="0.0" y="54.5" width="335" height="17"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="17" id="Vh8-0V-HRO"/>
                                                 </constraints>
@@ -191,27 +191,37 @@
                                             <constraint firstAttribute="trailing" secondItem="6Mh-fN-Wjk" secondAttribute="trailing" id="xm5-4v-QMk"/>
                                         </constraints>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Тело статьи" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIz-5U-6lY">
-                                        <rect key="frame" x="20" y="353" width="335" height="20.5"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gc-Up-hsx">
+                                        <rect key="frame" x="20" y="334" width="335" height="302.5"/>
+                                        <color key="backgroundColor" name="CustomBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="ua6-6y-XNe"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Afs-4r-ief"/>
                                         </constraints>
+                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="18"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="rect" keyPath="textContainerInset">
+                                                <rect key="value" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="textContainer.lineFragmentPadding">
+                                                <integer key="value" value="0"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="t6Q-ge-sKW" firstAttribute="top" secondItem="blD-R3-a7Y" secondAttribute="bottom" constant="20" id="1xr-zP-qik"/>
                                     <constraint firstAttribute="trailing" secondItem="blD-R3-a7Y" secondAttribute="trailing" id="1ya-oM-evR"/>
                                     <constraint firstItem="blD-R3-a7Y" firstAttribute="leading" secondItem="o3q-7l-NvF" secondAttribute="leading" id="3mz-Qz-ScQ"/>
-                                    <constraint firstItem="eIz-5U-6lY" firstAttribute="leading" secondItem="t6Q-ge-sKW" secondAttribute="leading" id="9hM-Jw-z7C"/>
-                                    <constraint firstAttribute="bottom" secondItem="eIz-5U-6lY" secondAttribute="bottom" constant="20" id="VXq-IE-Ryo"/>
-                                    <constraint firstItem="eIz-5U-6lY" firstAttribute="trailing" secondItem="t6Q-ge-sKW" secondAttribute="trailing" id="YhE-XT-xhR"/>
+                                    <constraint firstItem="9gc-Up-hsx" firstAttribute="trailing" secondItem="t6Q-ge-sKW" secondAttribute="trailing" id="N2b-vg-gKT"/>
+                                    <constraint firstItem="9gc-Up-hsx" firstAttribute="top" secondItem="t6Q-ge-sKW" secondAttribute="bottom" constant="25.5" id="OOt-Dm-4Lg"/>
+                                    <constraint firstItem="9gc-Up-hsx" firstAttribute="leading" secondItem="t6Q-ge-sKW" secondAttribute="leading" id="SNT-Kd-6E9"/>
                                     <constraint firstItem="t6Q-ge-sKW" firstAttribute="leading" secondItem="o3q-7l-NvF" secondAttribute="leading" constant="20" id="dqi-Ji-RBI"/>
                                     <constraint firstAttribute="trailing" secondItem="t6Q-ge-sKW" secondAttribute="trailing" constant="20" id="gje-jg-kTE"/>
                                     <constraint firstItem="blD-R3-a7Y" firstAttribute="width" secondItem="o3q-7l-NvF" secondAttribute="width" id="jJJ-4S-92F"/>
-                                    <constraint firstItem="eIz-5U-6lY" firstAttribute="top" secondItem="t6Q-ge-sKW" secondAttribute="bottom" constant="45" id="jgh-Kh-cbs"/>
+                                    <constraint firstAttribute="bottom" secondItem="9gc-Up-hsx" secondAttribute="bottom" constant="20" id="kw7-Sw-2cM"/>
                                     <constraint firstItem="blD-R3-a7Y" firstAttribute="top" secondItem="o3q-7l-NvF" secondAttribute="top" id="onN-PF-806"/>
                                 </constraints>
                             </scrollView>
@@ -228,7 +238,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="yZX-OT-WN1"/>
                     <connections>
-                        <outlet property="bodyLabel" destination="eIz-5U-6lY" id="l6Q-ht-sDg"/>
+                        <outlet property="bodyTextView" destination="9gc-Up-hsx" id="Yxg-2S-ZG5"/>
                         <outlet property="dateLabel" destination="6Mh-fN-Wjk" id="lGt-gG-Ml6"/>
                         <outlet property="newsImageView" destination="blD-R3-a7Y" id="jHT-ZR-ctV"/>
                         <outlet property="publisherLabel" destination="szg-Xs-3Zw" id="yCX-SL-Tyz"/>
@@ -237,7 +247,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0wS-Xh-Qzu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1452" y="-447.04433497536945"/>
+            <point key="canvasLocation" x="-1370.4000000000001" y="-448.42578710644682"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="3Ko-Oo-XaJ">
